// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionReceiptShare > rendering > matches snapshot for compact layout 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":ra:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Hide amount"
          aria-pressed="false"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye-off"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
            />
            <path
              d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
            />
            <path
              d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
            />
            <path
              d="m2 2 20 20"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Hide
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--compact "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <span
            class="tx-brand-name"
          >
            Revora
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span>
            1,500.00
             
            USDC
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          Revora
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionReceiptShare > snapshots > all optional fields 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":r20:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Hide amount"
          aria-pressed="false"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye-off"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
            />
            <path
              d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
            />
            <path
              d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
            />
            <path
              d="m2 2 20 20"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Hide
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--compact "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <img
            alt="AcmeCorp logo"
            class="tx-brand-logo"
            crossorigin="anonymous"
            src="https://example.com/logo.png"
          />
          <span
            class="tx-brand-name"
          >
            AcmeCorp
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span>
            1,500.00
             
            USDC
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Hash
          </span>
          <span
            class="tx-detail-value tx-mono"
          >
            0xabcdef
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Memo
          </span>
          <span
            class="tx-detail-value"
          >
            Payment for invoice #42
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          AcmeCorp
        </div>
        <div
          class="tx-explorer-link"
        >
          Explorer:
           
          <a
            href="https://explorer.example.com/tx/abc"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://explorer.example.com/tx/abc
          </a>
        </div>
        <div
          class="tx-footer-hash"
        >
          Hash: 
          0xabcdef
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionReceiptShare > snapshots > compact layout 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":r1s:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Hide amount"
          aria-pressed="false"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye-off"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
            />
            <path
              d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
            />
            <path
              d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
            />
            <path
              d="m2 2 20 20"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Hide
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--compact "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <span
            class="tx-brand-name"
          >
            Revora
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span>
            1,500.00
             
            USDC
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          Revora
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionReceiptShare > snapshots > hidden amount 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":r1v:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Show amount"
          aria-pressed="true"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Show
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--compact "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <span
            class="tx-brand-name"
          >
            Revora
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span
            aria-label="Amount hidden for privacy"
            class="tx-amount-hidden"
          >
            ••••••
          </span>
          <div
            aria-hidden="true"
            class="tx-privacy-badge"
          >
            Hidden for privacy
          </div>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          Revora
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionReceiptShare > snapshots > square layout 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":r1t:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Hide amount"
          aria-pressed="false"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye-off"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
            />
            <path
              d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
            />
            <path
              d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
            />
            <path
              d="m2 2 20 20"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Hide
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--square "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <span
            class="tx-brand-name"
          >
            Revora
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span>
            1,500.00
             
            USDC
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          Revora
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionReceiptShare > snapshots > wide layout 1`] = `
<div>
  <div
    class="tx-receipt-container"
    data-testid="tx-receipt-share"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="tx-sr-only"
      data-testid="tx-live-region"
      id=":r1u:"
      role="status"
    />
    <div
      aria-label="Receipt sharing controls"
      class="tx-receipt-controls"
      role="toolbar"
    >
      <fieldset
        aria-label="Aspect ratio"
        class="tx-aspect-ratio-group"
      >
        <legend
          class="tx-sr-only"
        >
          Aspect ratio
        </legend>
        <button
          aria-label="Compact card"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Compact card"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Compact card
          </span>
        </button>
        <button
          aria-label="Square (1:1)"
          aria-pressed="false"
          class="tx-aspect-btn "
          title="Square (1:1)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Square (1:1)
          </span>
        </button>
        <button
          aria-label="Wide banner (16:9)"
          aria-pressed="true"
          class="tx-aspect-btn tx-aspect-btn--active"
          title="Wide banner (16:9)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rectangle-horizontal"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="12"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="tx-aspect-label"
          >
            Wide banner (16:9)
          </span>
        </button>
      </fieldset>
      <div
        class="tx-action-group"
      >
        <button
          aria-label="Hide amount"
          aria-pressed="false"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-eye-off"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
            />
            <path
              d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
            />
            <path
              d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
            />
            <path
              d="m2 2 20 20"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Hide
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Copy receipt image to clipboard"
          class="tx-action-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Copy
          </span>
        </button>
        <button
          aria-busy="false"
          aria-label="Download receipt as image"
          class="tx-action-btn tx-action-btn--primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-download"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3"
            />
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <path
              d="m7 10 5 5 5-5"
            />
          </svg>
          <span
            class="tx-action-text"
          >
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      aria-label="Transaction receipt details"
      class="tx-receipt-card tx-receipt-card--wide "
      data-testid="tx-receipt-card"
      role="region"
    >
      <div
        class="tx-receipt-header"
      >
        <div
          class="tx-receipt-brand"
        >
          <span
            class="tx-brand-name"
          >
            Revora
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-shield-check tx-verified-icon"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="tx-receipt-amount-section"
      >
        <div
          class="tx-receipt-label"
        >
          Amount
        </div>
        <div
          class="tx-receipt-amount"
        >
          <span>
            1,500.00
             
            USDC
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-details"
      >
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Status
          </span>
          <span
            class="tx-detail-value tx-status-completed"
          >
            COMPLETED
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Date
          </span>
          <span
            class="tx-detail-value"
          >
            Oct 24, 2023 14:30
          </span>
        </div>
        <div
          class="tx-detail-row"
        >
          <span
            class="tx-detail-label"
          >
            Transaction ID
          </span>
          <span
            class="tx-detail-value"
          >
            TX-12345
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            From
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Sender wallet: 0x1234567890abcdef1234567890abcdef12345678. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0x1234567890abcdef1234567890abcdef12345678
          </span>
        </div>
        <div
          class="tx-detail-row tx-sensitive-row"
        >
          <span
            class="tx-detail-label"
          >
            To
            <span
              class="tx-sensitive-icon"
              title="Copy disabled for security"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield-check"
                fill="none"
                height="10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
                <path
                  d="m9 12 2 2 4-4"
                />
              </svg>
            </span>
          </span>
          <span
            aria-label="Recipient wallet: 0xabcdef1234567890abcdef1234567890abcdef12. Copy disabled for security."
            class="tx-detail-value tx-unselectable"
            data-sensitive="true"
          >
            0xabcdef1234567890abcdef1234567890abcdef12
          </span>
        </div>
      </div>
      <div
        class="tx-receipt-footer"
      >
        <div>
          Generated securely by 
          Revora
        </div>
      </div>
    </div>
  </div>
</div>
`;
